タイトルをテトリスからTetrisに変更

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- ページの文字エンコードをUTF-8に設定 -->
     <meta charset="UTF-8">
     <!-- ページのタイトルを「テトリス」に設定 -->
-    <title>テトリス</title>
+    <title>Tetris</title>
     <!-- 外部のCSSファイルを読み込んで、ページのデザインを指定 -->
     <link rel="stylesheet" href="style.css">
     <style>
